* split all exported functions into their own files
* rearranged files into a more sensible file structure
* modified the psm1 to be generic in the loading of scripts and exporting of functions
* added code to GetSQLFileContent to ignore signing code blocks if attached to the file. In preparation for code signing.
* decided to expose Invoke-Telnet, going to add Test-SqlConnection
* Update README.md
* Update Invoke-DBMoveIndexes.md
1.0.45
* modified Invoke-DBSafeShrink.ps1 so that heaps with bad table design can still be moved
* added #Requires statements to tcdbtools.psm1 so that module will not import without requirements
1.0.46
* Added new function Invoke-DBScriptRunner to allow for running a script multithreaded against multiple target servers and databases
* added help docs for credential functions
* added helper functions ConvertFrom-DataRows, and ConvertFrom-DataTable
1.0.47
* converted from using System.Data to Microsoft.Data
* fixed bug when moving a heap with a preexisting identity column
* added many new parameters to New-DBSqlConnection
1.0.48
* fixed a bug leftover from the System.Data to Microsoft.Data conversion in Invoke-DBScriptRunner.ps1
1.0.49
* fixed a bug where a class was not usable when using Invoke-DBScriptRunner
1.0.50
* Added new function Invoke-DBSynchronizeSQLLogins and help file
* Removed the credentials parameter from Invoke-DBScriptRunner as that is encapsulated in TCDbTools.DBServer allowing for servers with different credentials to be be used
* Removed the mandatory attribute from the database parameter in New-DBSqlConnection. Now defaults to "master"
1.0.51
* Altered Invoke-DBSynchronizeSQLLogins so that if any of the logins / pwds / sids are the same when not using an authority then those logins are skipped as they do not need to synch
* Fixed a bug in the safe shrink that could happen when moving tables with LOB data, and the first column in the key had a maxlength, scale, or precision