@@ -257,3 +257,4 @@
 1.0.51
 * Altered Invoke-DBSynchronizeSQLLogins so that if any of the logins / pwds / sids are the same when not using an authority then those logins are skipped as they do not need to synch
 * Fixed a bug in the safe shrink that could happen when moving tables with LOB data, and the first column in the key had a maxlength, scale, or precision
+* modified the RemoveShrinkTempObjects.sql file to remove any lingering Partition functions or schemes
